# Floresta

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  SECURITY_AUDIT.md  _typos.toml  docker-compose.dev.yml  docker-compose.yml  flake.nix  justfile  pyproject.toml  taplo.toml  typos.toml
.github/: ci-test-each-commit-exec.sh
.github/workflows/: benchmarks.yml  docker.yml  functional.yml  lint.yml  per-commit-checks.yml  peripheral-lint.yml  rust.yml  signed-commits.yml  test-each-commit.yml
contrib/: check_each_commit.sh  clean_data.sh  commit-signatures.sh  config.toml.sample  env.docker.sample  feature_matrix.sh  install.sh
contrib/docker/: Dockerfile  docker-compose.yml
crates/floresta/: Cargo.toml
crates/floresta-bitassets-wallet/: Cargo.toml
crates/floresta-bitassets-wallet/include/: floresta_bitassets_wallet.h
crates/floresta-bitassets-wallet/src/: lib.rs  mobile.rs  mobile_ffi.rs
crates/floresta-chain/: Cargo.toml
crates/floresta-chain/benches/: chain_state_bench.rs
crates/floresta-chain/src/: extensions.rs  lib.rs
crates/floresta-chain/src/bitcoinkernelimpl/: blockchaininterface.rs  mod.rs
crates/floresta-chain/src/pruned_utreexo/: chain_state.rs  chain_state_builder.rs  chainparams.rs  chainstore.rs  consensus.rs  error.rs  flat_chain_store.rs  mod.rs  partial_chain.rs  udata.rs
crates/floresta-chain/testdata/: mainnet_blocks.txt
crates/floresta-chain/tests/: transaction_tests.rs
crates/floresta-common/: Cargo.toml
crates/floresta-common/src/: lib.rs
crates/floresta-compact-filters/: Cargo.toml
crates/floresta-compact-filters/src/: filters_man.rs  lib.rs  network_filters.rs
crates/floresta-domain/: Cargo.toml
crates/floresta-domain/src/: lib.rs
crates/floresta-domain/src/mempool/: error.rs  mempool_base.rs
crates/floresta-domain/src/wallet/: error.rs  mod.rs  wallet_base.rs
crates/floresta-domain/src/wallet/model/: merkle.rs  mod.rs
crates/floresta-electrum/: Cargo.toml
crates/floresta-electrum/src/: electrum_protocol.rs  error.rs  lib.rs  native_bitassets_wallet.rs
crates/floresta-mempool/: Cargo.toml
crates/floresta-mempool/benches/: mempool_policy_bench.rs
crates/floresta-mempool/src/: lib.rs  mempool.rs
crates/floresta-node/: Cargo.toml
crates/floresta-node/src/: bitassets_wallet.rs  config_file.rs  error.rs  florestad.rs  lib.rs  slip132.rs  wallet_input.rs  zmq.rs
crates/floresta-node/src/json_rpc/: auth.rs  blockchain.rs  chain_tip_proof.rs  control.rs  mod.rs  network.rs  raw_transaction.rs  request.rs  res.rs  server.rs  wallet.rs
crates/floresta-proc-macro/: Cargo.toml
crates/floresta-proc-macro/src/: enum_str_map.rs  lib.rs
crates/floresta-rpc/: Cargo.toml
crates/floresta-rpc/src/: jsonrpc_client.rs  lib.rs  rpc.rs  rpc_interfaces.rs  rpc_types.rs
crates/floresta-rpc/src/test_data/: mod.rs
crates/floresta-rpc/src/typed_rpc/: command_def.rs  mod.rs  response.rs
crates/floresta-wasm/: Cargo.toml
crates/floresta-wasm/src/: lib.rs  memory_chain_store.rs
crates/floresta-watch-only/: Cargo.toml  README.md
crates/floresta-watch-only/migrations/: V1__initial_schema.sql
crates/floresta-watch-only/src/: kv_database.rs  lib.rs  memory_database.rs  metadata.rs  models.rs  service.rs  sqlite_database.rs
crates/floresta-watch-only/src/descriptor/: mod.rs  slip132.rs
crates/floresta-watch-only/src/provider/: bdk_provider.rs  mod.rs
crates/floresta-watch-only/src/repository/: mod.rs  sqlite.rs
crates/floresta-watch-only/tests/: provider.rs  service.rs
crates/floresta-watch-only/tests/common/: mod.rs
crates/floresta-wire/: Cargo.toml
crates/floresta-wire/src/: lib.rs
crates/floresta-wire/src/p2p_wire/: address_man.rs  ban_man.rs  bitcoin_socket_addr.rs  block_proof.rs  chain_selector.rs  error.rs  macros.rs  mempool.rs  mod.rs  node.rs  node_context.rs  node_handle.rs  node_interface.rs  onion.rs  peer.rs  running_node.rs  socks.rs  stump_updater.rs  sync_node.rs  transport.rs
crates/floresta-wire/src/p2p_wire/node/: block_pipeline.rs  blocks.rs  chain_selector_ctx.rs  conn.rs  connectivity.rs  mod.rs  peer_man.rs  peer_manager.rs  private_broadcast_man.rs  running_ctx.rs  swift_sync_ctx.rs  sync_ctx.rs  user_req.rs
crates/floresta-wire/src/p2p_wire/tests/: chain_selector.rs  mod.rs  node_handle.rs  swift_sync.rs  sync_node.rs  utils.rs
crates/floresta-wire/src/p2p_wire/tests/test_data/: bitcoin.hints
crates/floresta-wire/src/private_broadcast/: connector.rs  mod.rs  queue.rs
doc/: build-macos.md  build-unix.md  docker.md  metrics.md  proxy.md  run.md  running-tests.md
doc/rpc/: abortprivatebroadcast.md  addnode.md  addpeeraddress.md  auth.md  findtxout.md  getaddednodeinfo.md  getaddrmaninfo.md  getblock.md  getblockchaininfo.md  getblockhash.md  getblockheader.md  getchaintips.md  getdeploymentinfo.md  getindexinfo.md  getmemoryinfo.md  getnodeaddresses.md  getpeerinfo.md  getprivatebroadcastinfo.md  getrawtransaction.md  getroots.md  getrpcinfo.md  gettransaction.md  gettxoutproof.md  invalidateblock.md  listdescriptors.md  ping.md  sendrawtransaction.md  stop.md  submitheader.md  uptime.md  verifyutxochaintipinclusionproof.md
docs/bitassets-lite-wallet/: local-signet-pr-readiness.md  phase-3.1-tx-parsing-plan.md  phase-3.2-asset-index-plan.md  phase-3.3-validation-rules-plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: addrman.rs  basic_auth_parse_header.rs  disk_block_header_roundtrip.rs  filter_descriptor_roundtrip.rs  flat_chainstore_header_insertion.rs  tip_proof_des.rs  tip_proof_from_str.rs  tip_proof_roundtrip.rs
metrics/: Cargo.toml
metrics/grafana/: dashboards.yml  datasource.yml
metrics/src/: lib.rs
scripts/: build-bitassets-wallet-mobile.sh
tests/: conftest.py  prepare.sh  run.sh  run_functional.sh  test_runner.py
tests/electrum/: blockchain_block_header.py  blockchain_block_headers.py
tests/example/: bitcoin.py  electrum.py  functional.py  integration.py  utreexod.py
tests/floresta-cli/: addnode-v1.py  addnode-v2.py  addnode.py  addpeeraddress.py  disconnectnode.py  getaddednodeinfo.py  getaddrmaninfo.py  getblock.py  (+27 more)
(+49 files in other folders)
