[project]
authors = [{ name = "The Floresta Project Developers" }]
dependencies = [
  "jsonrpclib>=0.2.1",
  "requests>=2.32.3",
  "black>=26.3.1",
  "pylint>=3.3.2",
  "cryptography>=46.0.5",
  "pyOpenSSL>=25.0.0",
]
description = "Collection of tools to help with the functional tests of Floresta"
license = { text = "MIT" }
name = "floresta-functional-tests"
requires-python = ">=3.12"
version = "0.0.3"

[tool.hatch.build.targets.wheel]
packages = ["tests/test_framework"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
