[package]
name = "floresta-common"
version = "0.4.0"
edition = "2021"
description = "Common types and functions for Floresta"
authors = ["Floresta Developers <contact@getfloresta.org>"]
license = "MIT"
repository = "https://github.com/getfloresta/Floresta"
readme.workspace = true # Floresta/README.md

[dependencies]
bitcoin = { workspace = true }
hashbrown = { version = "0.16" }
sha2 = { workspace = true }
spin = { workspace = true }

[features]
default = ["std"]
std = ["bitcoin/std", "sha2/std"]

[lints]
workspace = true
