[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = "Common types and functions for Floresta"
edition = "2021"
license = "MIT"
name = "floresta-common"
readme.workspace = true                                     # Floresta/README.md
repository = "https://github.com/getfloresta/Floresta"
version = "0.5.0"

[dependencies]
bitcoin = { workspace = true }
hashbrown = { version = "0.16" }
miniscript = { workspace = true, optional = true, default-features = false }
sha2 = { workspace = true }
spin = { workspace = true }

[features]
default = ["std", "descriptors-std"]
std = ["bitcoin/std", "sha2/std"]
# Both features can be set at the same time, but for `no_std` only the latter should be used
descriptors-no-std = ["miniscript/no-std"]
descriptors-std = ["miniscript/std"]

[lints]
workspace = true
