[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
BIP158 compact filters for easy rescan of the blockchain in light clients.
"""
edition = "2018"
homepage = "https://github.com/davidson-souza/floresta"
name = "floresta-compact-filters"
readme.workspace = true # Floresta/README.md
repository = "https://github.com/davidson-souza/floresta"
version = "0.5.0"

[dependencies]
bitcoin = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }

[lints]
workspace = true
