[package]
name = "floresta-compact-filters"
version = "0.5.0"
authors = ["Floresta Developers <contact@getfloresta.org>"]
edition = "2018"
homepage = "https://github.com/davidson-souza/floresta"
repository = "https://github.com/davidson-souza/floresta"
readme.workspace = true # Floresta/README.md
license.workspace = true
description = """
BIP158 compact filters for easy rescan of the blockchain in
light clients.
"""

[dependencies]
bitcoin = { workspace = true }

# Local dependencies
floresta-common = { workspace = true }
# TODO: Replace this with floresta-domain when it's ready
floresta-wire = { workspace = true }
floresta-chain = { workspace = true }
tracing = { workspace = true }
rand = "0.9.2"
tokio = { workspace = true }

[dev-dependencies]
rand = "0.9.2"

[lints]
workspace = true
