[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
categories = ["cryptography::cryptocurrencies"]
description = """
    A simple Electrum server implementation for Floresta. It is based on the
    Electrum protocol specification and works out of the box with any wallet
    that supports Electrum servers.
"""
edition = "2021"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
license = "MIT"
name = "floresta-electrum"
readme.workspace = true # Floresta/README.md
repository = "https://github.com/getfloresta/Floresta"
version = "0.5.0"

[dependencies]
bitcoin = { workspace = true }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["bitcoinkernel"] }
floresta-common = { workspace = true }
floresta-compact-filters = { workspace = true }
floresta-watch-only = { workspace = true }
floresta-wire = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rcgen = { workspace = true }
zstd = { workspace = true }

# Local dev-dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-mempool = { workspace = true }

[lints]
workspace = true
