[package]
name = "floresta-electrum"
version = "0.5.0"
edition = "2021"
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    A simple Electrum server implementation for Floresta. It is based on the
    Electrum protocol specification and works out of the box with any wallet
    that supports Electrum servers.
"""
repository = "https://github.com/getfloresta/Floresta"
license.workspace = true
readme.workspace = true # Floresta/README.md
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bitcoin = { workspace = true }
blake3 = { version = "1.8", optional = true }
borsh = { version = "1.6", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.2", features = ["serde"], optional = true }
hex = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
ureq = { version = "3.1", features = ["json", "rustls-no-provider"], default-features = false, optional = true }

# Local dependencies
floresta-chain = { workspace = true, features = ["bitcoinkernel"] }
floresta-compact-filters = { workspace = true }
floresta-common = { workspace = true }
floresta-watch-only = { workspace = true }
floresta-wire = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = { workspace = true }
zstd = { workspace = true }

# Local dev-dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-mempool = { workspace = true }

[features]
default = []
bitassets = [
    "dep:blake3",
    "dep:borsh",
    "dep:ed25519-dalek",
    "dep:hex",
    "dep:rand",
    "dep:ureq",
    "floresta-chain/bitassets",
]

[lints]
workspace = true
