[package]
name = "floresta-mempool"
version = "0.5.0"
edition = "2021"
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    A policy-driven, stateful transaction mempool for Floresta,
    responsible for transaction relay decisions, fee estimation, and
    block template construction.
"""
repository = "https://github.com/getfloresta/Floresta"
license = "MIT"
readme.workspace = true
keywords = ["bitcoin", "mempool", "transactions"]

[dependencies]
ahash = { version = "0.8", default-features = false }
bitcoin = { workspace = true }
rand = { workspace = true }
rustreexo = { workspace = true }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }

[dev-dependencies]
criterion = "0.7"
floresta-common = { workspace = true }
proptest = "1.0"

[features]
default = []

[[bench]]
name = "mempool_policy_bench"
harness = false

[lints]
workspace = true
