[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    A policy-driven, stateful transaction mempool for Floresta,
    responsible for transaction relay decisions, fee estimation, and
    block template construction.
"""
edition = "2021"
keywords = ["bitcoin", "mempool", "transactions"]
license = "MIT"
name = "floresta-mempool"
readme.workspace = true
repository = "https://github.com/getfloresta/Floresta"
version = "0.5.0"

[dependencies]
ahash = { version = "0.8", default-features = false }
bitcoin = { workspace = true }
rand = { workspace = true }
rustreexo = { workspace = true }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }

[dev-dependencies]
floresta-common = { workspace = true }

[features]
default = []

[lints]
workspace = true
