[package]
name = "floresta-node"
version = "0.9.0"
edition = "2021"
license.workspace = true
readme.workspace = true # Floresta/README.md
authors = ["Floresta Developers <contact@getfloresta.org>"]

[dependencies]
axum = { workspace = true, optional = true }
bitcoin = { workspace = true }
blake3 = { version = "1.8", optional = true }
borsh = { version = "1.6", features = ["derive"], optional = true }
corepc-types = { workspace = true }
dns-lookup = { workspace = true }
ed25519-dalek = { version = "2.2", features = ["serde"], optional = true }
hex = { workspace = true, optional = true }
miniscript = { workspace = true, features = ["std"] }
rand = { workspace = true, optional = true }
quinn = { version = "0.11.6", optional = true }
rcgen = { workspace = true }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"], optional = true }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tower-http = { version = "0.6", optional = true, features = ["cors"] }
tracing = { workspace = true }
ureq = { version = "3.1", features = ["json", "rustls-no-provider"], default-features = false }
zmq = { version = "0.10", optional = true, default-features = false }

# Local dependencies
floresta-chain = { workspace = true, features = ["bitcoinkernel"] }
floresta-bitassets-wallet = { workspace = true, optional = true }
floresta-compact-filters = { workspace = true, optional = true }
floresta-common = { workspace = true }
floresta-electrum = { workspace = true }
floresta-mempool = { workspace = true }
floresta-watch-only = { workspace = true }
floresta-wire = { workspace = true }
metrics = { workspace = true,  optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = { workspace = true }

[target.'cfg(target_env = "gnu")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[features]
compact-filters = ["dep:floresta-compact-filters"]
zmq-server = ["dep:zmq"]
json-rpc = ["dep:axum", "dep:tower-http", "compact-filters"]
default = ["json-rpc"]
metrics = ["dep:metrics", "floresta-wire/metrics", "floresta-chain/metrics"]
bitassets = [
    "dep:floresta-bitassets-wallet",
    "dep:hex",
    "dep:quinn",
    "dep:rand",
    "dep:rustls",
    "floresta-chain/bitassets",
    "floresta-electrum/bitassets",
]

[lints]
workspace = true
