[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
description = """
floresta-rpc is a Rust library that provides a JSON-RPC interface for interacting with Floresta. It allows
users to perform various operations such as querying blockchain data, managing wallets, and
broadcasting transactions through a simple and efficient API.
"""
edition = "2021"
keywords = ["bitcoin", "utreexo", "node", "blockchain", "rust"]
license = "MIT"
name = "floresta-rpc"
readme.workspace = true # Floresta/README.md
repository = "https://github.com/getfloresta/Floresta"
version = "0.5.0"

[dependencies]
bitcoin = { workspace = true }
clap = { workspace = true, optional = true }
corepc-types = { workspace = true }
jsonrpc = { version = "0.19", features = ["bitreq_http"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rcgen = { workspace = true }

[features]
clap = ["dep:clap"]
default = ["with-jsonrpc"]
with-jsonrpc = ["dep:jsonrpc"]

[lints]
workspace = true
