[package]
name = "floresta-wasm"
version = "0.5.0"
edition = "2021"
authors = ["Floresta Developers <contact@getfloresta.org>"]
description = """
    WebAssembly bindings for Floresta's core chain validation and watch-only
    wallet components.  Runs in the browser or any WASM runtime.
"""
repository = "https://github.com/getfloresta/Floresta"
license = "MIT"
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
floresta-chain = { workspace = true }
floresta-common = { workspace = true, features = ["std"] }
floresta-watch-only = { workspace = true, features = ["memory-database"] }
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, features = ["std"] }
spin = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
