[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
categories = ["cryptography::cryptocurrencies"]
description = "A simple, lightweight and Electrum-First, watch-only wallet"
edition = "2021"
keywords = ["bitcoin", "watch-only", "electrum-server"]
license = "MIT"
name = "floresta-watch-only"
readme.workspace = true                                                     # Floresta/README.md
repository = "https://github.com/getfloresta/Floresta"
version = "0.5.0"

[dependencies]
bitcoin = { workspace = true, features = ["serde"] }
kv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }

# Local dependencies
floresta-chain = { workspace = true }
floresta-common = { workspace = true, features = ["descriptors-no-std"] }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ["std"]
memory-database = []
# The default features in common are `std` and `descriptors-std` (which is a superset of `descriptors-no-std`)
std = ["floresta-common/default", "serde/std"]

[lints]
workspace = true
