[package]
authors = ["Floresta Developers <contact@getfloresta.org>"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
description = """
    Some utreexo-aware wire protocol for floresta. You can use this crate
    to fetch blocks and transactions from the network, and to broadcast
    your own transactions.
"""
edition = "2021"
keywords = ["bitcoin", "utreexo", "p2p", "networking"]
license = "MIT"
name = "floresta-wire"
readme = "README.md"
repository = "https://github.com/getfloresta/Floresta"
version = "0.5.0"

[dependencies]
bip324 = { version = "0.10", features = ["tokio"] }
bitcoin = { workspace = true }
dns-lookup = { workspace = true }
rand = { workspace = true }
rustls = "=0.23.27"
rustreexo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
ureq = { version = "3.1", features = [
  "socks-proxy",
  "json",
  "rustls-no-provider",
], default-features = false }

# Local dependencies
floresta-chain = { workspace = true, features = ["flat-chainstore"] }
floresta-common = { workspace = true }
floresta-compact-filters = { workspace = true }
floresta-mempool = { workspace = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
derive_more = { version = "2.1", features = ["constructor"] }
zstd = { workspace = true }

[features]
default = []
metrics = ["dep:metrics"]

[lints]
workspace = true
